# dovecot-mech-passkey

./: .gitignore  README.md  configure.ac  mech_u2f.py
src/: Makefile.am  decode.py  mech-passkey.c  mech.c  test.c
